syntax = "proto3";

import "google/protobuf/wrappers.proto";

message NumberResponse {
  uint64 value = 1;
}

message SuccessResponse {
  bool value = 1;
}

message StringResponse {
  string value = 1;
}

message PeerConnectRequest {
  google.protobuf.StringValue ip = 1;
  google.protobuf.Int32Value port = 2;
}

message PeerListResponse {
  message Peer {
    string node_id = 1; 
    uint32 port = 2;
    string ip = 3;
  }
  repeated Peer peer = 1;
}

message PeerStatsResponse {
  message PeerStats {
    string node_id = 1; 
    uint64 packets_sent = 2; 
    uint64 packets_received = 3;
  }
  repeated PeerStats peerstats = 1;
}

message SendMessageRequest {
  google.protobuf.StringValue node_id = 1;
  google.protobuf.BytesValue message = 2;
  google.protobuf.BoolValue broadcast = 3;
}

message Empty {}

service P2P {
  rpc PeerConnect (PeerConnectRequest) returns (SuccessResponse) {}
  rpc PeerUptime(Empty) returns (NumberResponse) {}
  rpc PeerTotalSent(Empty) returns (NumberResponse) {}
  rpc PeerTotalReceived(Empty) returns(NumberResponse) {}
  rpc PeerVersion(Empty) returns (StringResponse) {}
  rpc SendMessage(SendMessageRequest) returns (SuccessResponse) {}
  rpc PeerStats(Empty) returns (PeerStatsResponse) {}
  rpc PeerList(Empty) returns (PeerListResponse) {}
}